# ReCAP

./: LICENSE  README.md
alfworld-recap/: .gitignore  README.md  batch_ablation.py  main.py  pyproject.toml
alfworld-recap/MATRIX/: requirements.txt
alfworld-recap/MATRIX/MATRIX/: alfworld_3prompts.json  alfworld_3prompts_no_json.json  alfworld_3prompts_no_json_all_loc.json  alfworld_3prompts_no_json_all_loc_no_think.json  alfworld_3prompts_no_json_all_loc_no_tree.json  alfworld_3prompts_no_omit.json  alfworld_3prompts_no_think.json  alfworld_3prompts_no_tree.json  alfworld_3prompts_no_tree_no_taskname.json  alfworld_3prompts_remove_overfit.json  chatbot.py  chatbot_level.py  chatbot_max_level_2.py  chatbot_max_level_3.py  chatbot_max_level_4.py  chatbot_no_think.py  chatbot_no_tree.py  chatbot_think.py  chatbot_think_many.py  prompts.py
alfworld-recap/MATRIX/MATRIX/debug/: __init__.py  debug.py
alfworld-recap/MATRIX/MATRIX/logger/: logger.py
alfworld-recap/MATRIX/MATRIX/session/: SessionManager.py
alfworld-recap/act_alfworld/: act.py  alfworld_3prompts_act.json
alfworld-recap/react_alfworld/: alfworld_3prompts_fixed.json  react.py  react_prompt_fixer.py
fever-recap/: .gitignore  README.md  baseline_act.ipynb  baseline_standard.ipynb  main.py
fever-recap/conf/: config.toml
hotpotqa-recap/: React.ipynb  baseline_cot.ipynb  requirements.txt
robotouille-baselines/: README.md  main.py  requirements.txt
robotouille-recap/: .gitignore  README.md  main.py  requirements.txt
swebench-recap/: README.md  collect_predictions.py  run_swe_bench_tasks.py
(+283 files in other folders)
